# HNanoSolver

./: .clang-format  .gitignore  AttributeTransferUtil.hpp  CMakeLists.txt  CMakePresets.json  Geometry.cpp  ParmFactory.cpp  README.md  SOP_NodeVDB.cpp  SOP_NodeVDB.hpp  SOP_VDBSolver.cpp  SOP_VDBSolver.hpp  SOP_VDBVerbUtils.hpp  test_scene.hipnc  utils.cc  utils.cpp  utils.h  utils.hpp  vdb_solver.cpp  vdb_solver.hpp
HNanoViewer/: CMakeLists.txt
HNanoViewer/shaders/: vertex_shader.vert
HNanoViewer/src/: Application.cpp  Application.hpp  HNanoViewer.cpp  OpenVDBLoader.cpp  OpenVDBLoader.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp
Tests/: CMakeLists.txt  IndexGrid.cpp
src/: IncomingDataCache.hpp  SOP_VDBSolver.cpp  SOP_VDBSolver.hpp
src/Cuda/: Advection.cu  CMakeLists.txt  Combustion.cu  HNanoSolver.cu  Kernel.cu  Kernels.cu  Kernels.cuh  PointToGrid.cu  PointToGrid.cuh  PressureProjection.cu  Utils.cuh
src/Cuda/BrickMap/: BrickMap.cu  BrickMap.cuh  CMakeLists.txt  Sampler.cuh
src/Cuda/HNanoGrid/: HNanoGrid.cuh
src/HNanoViewer/: CMakeLists.txt
src/HNanoViewer/Cuda/: CMakeLists.txt  VolumeTex.cu  VolumeTex.cuh
src/HNanoViewer/glad/include/glad/: glad.h
src/HNanoViewer/glad/src/: glad.c
src/HNanoViewer/shaders/: fragment_shader.frag  wireframe.frag
src/HNanoViewer/src/: Application.cpp  Application.hpp  HNanoViewer.cpp  OpenVDBLoader.cpp  OpenVDBLoader.hpp  Renderer.cpp  Shader.cpp
src/Kernel/: CMakeLists.txt  kernel.cu  pointsToGrid_kernel.cu  thrust_kernel.cu  utils.cuh
src/OpenVDB_Utils/: Geometry.hpp  ParmFactory.hpp  PointUtils.cpp  PointUtils.hpp  SOP_NodeVDB.cpp  SOP_NodeVDB.hpp  SOP_VDBVerbUtils.hpp  Utils.cpp  Utils.hpp
src/SOP/: CMakeLists.txt
src/SOP/Advection/: SOP_VDBAdvect.cpp  SOP_VDBAdvect.hpp
src/SOP/HNanoSolver/: SOP_HNanoSolver.cpp  SOP_HNanoSolver.hpp
src/SOP/ProjectNonDivergent/: MultigridSolver.hpp  SOP_VDBProjectNonDivergent.cpp  SOP_VDBProjectNonDivergent.hpp
src/SOP/ReadWrite/: SOP_ReadWriteTest.cpp  SOP_ReadWriteTest.hpp  SOP_VDBFromGrid.cpp  SOP_VDBFromGrid.hpp
src/SOP/Solver/: SOP_VDBSolver.cpp  SOP_VDBSolver.hpp
src/SOP/VelocityAdvection/: SOP_VDBAdvectVelocity.cpp  SOP_VDBAdvectVelocity.hpp
src/Tests/: CMakeLists.txt  IndexGrid.cpp
src/Utils/: CudaStreamWrapper.hpp  GPUMemory.hpp  GridBuilder.hpp  GridData.hpp  IncomingDataCache.hpp  Memory.hpp  OpenToNano.hpp  ScopedTimer.hpp  Stencils.hpp  Utils.cpp  Utils.hpp
